--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^3.21.0",
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.0",
+    "flatted": "^3.2.5",
     "nanoid": "^3.3.1",
     "qrcode": "^1.5.0",
     "random-avatar-generator": "^2.0.0",
@@ -34,6 +35,7 @@
     "vue-apexcharts": "^1.6.2",
     "vue-eslint-parser": "^8.3.0",
     "vue-router": "^3.2.0",
+    "vue-worker": "^1.2.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
     "webpack": "^4.3.0"
