Final tests are complete, we are officially clear for launch 🚀

--- a/firebase.json
+++ b/firebase.json
@@ -5,14 +5,12 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
-  },
-  "emulators": {
-    "auth": {
-      "port": 9099
-    },
-    "ui": {
-      "enabled": false
-    }
   }
 }
