--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
     "@firebase/app-types": "0.x",
     "@vite/connector": "^0.0.2",
     "@vite/vitejs": "^2.3.18",
+    "@vite/vitejs-http": "^2.3.18",
     "@vite/vitejs-ws": "^2.3.18",
     "bignumber.js": "^9.0.2",
     "body-parser": "^1.19.2",
     "compress-json": "^2.0.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
