Fixes a random and very specific bug causing the results charts and discord results embed to include a double vote on the very first vote of a weighted proposal with two choices and the users vote being 100% on only one of the two options...fun

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -37,3 +37,8 @@ yarn-error.log*
 /storage/serviceAccountKey.json
 /storage/whitelistedAddrs.json
 VITCGovernance.log
+
+# Sandbox
+EmailTemplate.html
+VoterList.js
+DiscordBotStatus.js
